fix: Changement de getFirst() en get(0) pour convenir aux anciennes versions de java